--- a/content/3.data_tools/pandas/01.drill/pandas_exercises/07_Creating_Series_and_DataFrames/Pokemon/Exercises.ipynb
+++ b/content/3.data_tools/pandas/01.drill/pandas_exercises/07_Creating_Series_and_DataFrames/Pokemon/Exercises.ipynb
@@ -22,10 +22,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -36,12 +39,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "data={\n",
+    "    'evolution': ['Ivysaur','Charmeleon','Wartortle','Metapod'],\n",
+    "    'hp': ['45','39','44','45'], \n",
+    "    'name': ['Bulbasaur','Charmander','Squirtle','Caterpie'],\n",
+    "    'pokedex': ['yes','no','yes','no'],\n",
+    "    'type': ['grass','fire','water','bug']}"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -52,10 +62,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>evolution</th>\n",
+       "      <th>hp</th>\n",
+       "      <th>name</th>\n",
+       "      <th>pokedex</th>\n",
+       "      <th>type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Ivysaur</td>\n",
+       "      <td>45</td>\n",
+       "      <td>Bulbasaur</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>grass</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Charmeleon</td>\n",
+       "      <td>39</td>\n",
+       "      <td>Charmander</td>\n",
+       "      <td>no</td>\n",
+       "      <td>fire</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Wartortle</td>\n",
+       "      <td>44</td>\n",
+       "      <td>Squirtle</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>water</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Metapod</td>\n",
+       "      <td>45</td>\n",
+       "      <td>Caterpie</td>\n",
+       "      <td>no</td>\n",
+       "      <td>bug</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    evolution  hp        name pokedex   type\n",
+       "0     Ivysaur  45   Bulbasaur     yes  grass\n",
+       "1  Charmeleon  39  Charmander      no   fire\n",
+       "2   Wartortle  44    Squirtle     yes  water\n",
+       "3     Metapod  45    Caterpie      no    bug"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pokemon=pd.DataFrame(data)\n",
+    "pokemon"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -66,10 +157,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>type</th>\n",
+       "      <th>hp</th>\n",
+       "      <th>evolution</th>\n",
+       "      <th>pokedex</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Bulbasaur</td>\n",
+       "      <td>grass</td>\n",
+       "      <td>45</td>\n",
+       "      <td>Ivysaur</td>\n",
+       "      <td>yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Charmander</td>\n",
+       "      <td>fire</td>\n",
+       "      <td>39</td>\n",
+       "      <td>Charmeleon</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Squirtle</td>\n",
+       "      <td>water</td>\n",
+       "      <td>44</td>\n",
+       "      <td>Wartortle</td>\n",
+       "      <td>yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Caterpie</td>\n",
+       "      <td>bug</td>\n",
+       "      <td>45</td>\n",
+       "      <td>Metapod</td>\n",
+       "      <td>no</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         name   type  hp   evolution pokedex\n",
+       "0   Bulbasaur  grass  45     Ivysaur     yes\n",
+       "1  Charmander   fire  39  Charmeleon      no\n",
+       "2    Squirtle  water  44   Wartortle     yes\n",
+       "3    Caterpie    bug  45     Metapod      no"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pokemon.reindex(columns=['name','type','hp','evolution','pokedex'])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -80,10 +251,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>evolution</th>\n",
+       "      <th>hp</th>\n",
+       "      <th>name</th>\n",
+       "      <th>pokedex</th>\n",
+       "      <th>type</th>\n",
+       "      <th>place</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Ivysaur</td>\n",
+       "      <td>45</td>\n",
+       "      <td>Bulbasaur</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>grass</td>\n",
+       "      <td>Kanto</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Charmeleon</td>\n",
+       "      <td>39</td>\n",
+       "      <td>Charmander</td>\n",
+       "      <td>no</td>\n",
+       "      <td>fire</td>\n",
+       "      <td>Johto</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Wartortle</td>\n",
+       "      <td>44</td>\n",
+       "      <td>Squirtle</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>water</td>\n",
+       "      <td>Hoenn</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Metapod</td>\n",
+       "      <td>45</td>\n",
+       "      <td>Caterpie</td>\n",
+       "      <td>no</td>\n",
+       "      <td>bug</td>\n",
+       "      <td>Sinnoh</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    evolution  hp        name pokedex   type   place\n",
+       "0     Ivysaur  45   Bulbasaur     yes  grass   Kanto\n",
+       "1  Charmeleon  39  Charmander      no   fire   Johto\n",
+       "2   Wartortle  44    Squirtle     yes  water   Hoenn\n",
+       "3     Metapod  45    Caterpie      no    bug  Sinnoh"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "place=['Kanto','Johto','Hoenn','Sinnoh']\n",
+    "pokemon['place']=place\n",
+    "pokemon"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -94,10 +352,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 4 entries, 0 to 3\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column     Non-Null Count  Dtype \n",
+      "---  ------     --------------  ----- \n",
+      " 0   evolution  4 non-null      object\n",
+      " 1   hp         4 non-null      object\n",
+      " 2   name       4 non-null      object\n",
+      " 3   pokedex    4 non-null      object\n",
+      " 4   type       4 non-null      object\n",
+      " 5   place      4 non-null      object\n",
+      "dtypes: object(6)\n",
+      "memory usage: 320.0+ bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "pokemon.info()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -107,18 +387,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Step 7. print all the column names."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['evolution', 'hp', 'name', 'pokedex', 'type', 'place'], dtype='object')"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pokemon.columns"
+   ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "486e0d5a79acdbfffd563ee7a67a93a5017bd2a4f66495483a69f0245c8a4a6c"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.4 64-bit (windows store)",
    "language": "python",
    "name": "python3"
   },
@@ -132,7 +435,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
