--- a/content/3.data_tools/pandas/01.drill/pandas_exercises/08_Time_Series/Apple_Stock/Exercises.ipynb
+++ b/content/3.data_tools/pandas/01.drill/pandas_exercises/08_Time_Series/Apple_Stock/Exercises.ipynb
@@ -21,12 +21,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "# visualization\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "%matplotlib inline"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -37,12 +45,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "url=\"https://raw.githubusercontent.com/guipsamora/pandas_exercises/master/09_Time_Series/Apple_Stock/appl_1980_2014.csv\""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -53,12 +63,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\HP\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\IPython\\core\\interactiveshell.py:3397: FutureWarning: In a future version of pandas all arguments of read_csv except for the argument 'filepath_or_buffer' will be keyword-only.\n",
+      "  exec(code_obj, self.user_global_ns, self.user_ns)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Adj Close</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2014-07-08</td>\n",
+       "      <td>96.27</td>\n",
+       "      <td>96.80</td>\n",
+       "      <td>93.92</td>\n",
+       "      <td>95.35</td>\n",
+       "      <td>65130000</td>\n",
+       "      <td>95.35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2014-07-07</td>\n",
+       "      <td>94.14</td>\n",
+       "      <td>95.99</td>\n",
+       "      <td>94.10</td>\n",
+       "      <td>95.97</td>\n",
+       "      <td>56305400</td>\n",
+       "      <td>95.97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2014-07-03</td>\n",
+       "      <td>93.67</td>\n",
+       "      <td>94.10</td>\n",
+       "      <td>93.20</td>\n",
+       "      <td>94.03</td>\n",
+       "      <td>22891800</td>\n",
+       "      <td>94.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2014-07-02</td>\n",
+       "      <td>93.87</td>\n",
+       "      <td>94.06</td>\n",
+       "      <td>93.09</td>\n",
+       "      <td>93.48</td>\n",
+       "      <td>28420900</td>\n",
+       "      <td>93.48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2014-07-01</td>\n",
+       "      <td>93.52</td>\n",
+       "      <td>94.07</td>\n",
+       "      <td>93.13</td>\n",
+       "      <td>93.52</td>\n",
+       "      <td>38170200</td>\n",
+       "      <td>93.52</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Date   Open   High    Low  Close    Volume  Adj Close\n",
+       "0  2014-07-08  96.27  96.80  93.92  95.35  65130000      95.35\n",
+       "1  2014-07-07  94.14  95.99  94.10  95.97  56305400      95.97\n",
+       "2  2014-07-03  93.67  94.10  93.20  94.03  22891800      94.03\n",
+       "3  2014-07-02  93.87  94.06  93.09  93.48  28420900      93.48\n",
+       "4  2014-07-01  93.52  94.07  93.13  93.52  38170200      93.52"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "apple=pd.read_csv(url,',')\n",
+    "apple.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -69,12 +189,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 8465 entries, 0 to 8464\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column     Non-Null Count  Dtype  \n",
+      "---  ------     --------------  -----  \n",
+      " 0   Date       8465 non-null   object \n",
+      " 1   Open       8465 non-null   float64\n",
+      " 2   High       8465 non-null   float64\n",
+      " 3   Low        8465 non-null   float64\n",
+      " 4   Close      8465 non-null   float64\n",
+      " 5   Volume     8465 non-null   int64  \n",
+      " 6   Adj Close  8465 non-null   float64\n",
+      "dtypes: float64(5), int64(1), object(1)\n",
+      "memory usage: 463.1+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "apple.info()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -85,12 +228,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0   2014-07-08\n",
+       "1   2014-07-07\n",
+       "2   2014-07-03\n",
+       "3   2014-07-02\n",
+       "4   2014-07-01\n",
+       "Name: Date, dtype: datetime64[ns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data=apple['Date'] = pd.to_datetime(apple['Date'])\n",
+    "data.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -101,12 +263,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Adj Close</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2014-07-08</th>\n",
+       "      <td>96.27</td>\n",
+       "      <td>96.80</td>\n",
+       "      <td>93.92</td>\n",
+       "      <td>95.35</td>\n",
+       "      <td>65130000</td>\n",
+       "      <td>95.35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-07-07</th>\n",
+       "      <td>94.14</td>\n",
+       "      <td>95.99</td>\n",
+       "      <td>94.10</td>\n",
+       "      <td>95.97</td>\n",
+       "      <td>56305400</td>\n",
+       "      <td>95.97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-07-03</th>\n",
+       "      <td>93.67</td>\n",
+       "      <td>94.10</td>\n",
+       "      <td>93.20</td>\n",
+       "      <td>94.03</td>\n",
+       "      <td>22891800</td>\n",
+       "      <td>94.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-07-02</th>\n",
+       "      <td>93.87</td>\n",
+       "      <td>94.06</td>\n",
+       "      <td>93.09</td>\n",
+       "      <td>93.48</td>\n",
+       "      <td>28420900</td>\n",
+       "      <td>93.48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-07-01</th>\n",
+       "      <td>93.52</td>\n",
+       "      <td>94.07</td>\n",
+       "      <td>93.13</td>\n",
+       "      <td>93.52</td>\n",
+       "      <td>38170200</td>\n",
+       "      <td>93.52</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Open   High    Low  Close    Volume  Adj Close\n",
+       "Date                                                       \n",
+       "2014-07-08  96.27  96.80  93.92  95.35  65130000      95.35\n",
+       "2014-07-07  94.14  95.99  94.10  95.97  56305400      95.97\n",
+       "2014-07-03  93.67  94.10  93.20  94.03  22891800      94.03\n",
+       "2014-07-02  93.87  94.06  93.09  93.48  28420900      93.48\n",
+       "2014-07-01  93.52  94.07  93.13  93.52  38170200      93.52"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "apple.set_index('Date',inplace=True)\n",
+    "apple.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -117,12 +385,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "apple.index.is_unique"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -133,12 +414,180 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Adj Close</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1980-12-12</th>\n",
+       "      <td>28.75</td>\n",
+       "      <td>28.87</td>\n",
+       "      <td>28.75</td>\n",
+       "      <td>28.75</td>\n",
+       "      <td>117258400</td>\n",
+       "      <td>0.45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1980-12-15</th>\n",
+       "      <td>27.38</td>\n",
+       "      <td>27.38</td>\n",
+       "      <td>27.25</td>\n",
+       "      <td>27.25</td>\n",
+       "      <td>43971200</td>\n",
+       "      <td>0.42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1980-12-16</th>\n",
+       "      <td>25.37</td>\n",
+       "      <td>25.37</td>\n",
+       "      <td>25.25</td>\n",
+       "      <td>25.25</td>\n",
+       "      <td>26432000</td>\n",
+       "      <td>0.39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1980-12-17</th>\n",
+       "      <td>25.87</td>\n",
+       "      <td>26.00</td>\n",
+       "      <td>25.87</td>\n",
+       "      <td>25.87</td>\n",
+       "      <td>21610400</td>\n",
+       "      <td>0.40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1980-12-18</th>\n",
+       "      <td>26.63</td>\n",
+       "      <td>26.75</td>\n",
+       "      <td>26.63</td>\n",
+       "      <td>26.63</td>\n",
+       "      <td>18362400</td>\n",
+       "      <td>0.41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-07-01</th>\n",
+       "      <td>93.52</td>\n",
+       "      <td>94.07</td>\n",
+       "      <td>93.13</td>\n",
+       "      <td>93.52</td>\n",
+       "      <td>38170200</td>\n",
+       "      <td>93.52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-07-02</th>\n",
+       "      <td>93.87</td>\n",
+       "      <td>94.06</td>\n",
+       "      <td>93.09</td>\n",
+       "      <td>93.48</td>\n",
+       "      <td>28420900</td>\n",
+       "      <td>93.48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-07-03</th>\n",
+       "      <td>93.67</td>\n",
+       "      <td>94.10</td>\n",
+       "      <td>93.20</td>\n",
+       "      <td>94.03</td>\n",
+       "      <td>22891800</td>\n",
+       "      <td>94.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-07-07</th>\n",
+       "      <td>94.14</td>\n",
+       "      <td>95.99</td>\n",
+       "      <td>94.10</td>\n",
+       "      <td>95.97</td>\n",
+       "      <td>56305400</td>\n",
+       "      <td>95.97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2014-07-08</th>\n",
+       "      <td>96.27</td>\n",
+       "      <td>96.80</td>\n",
+       "      <td>93.92</td>\n",
+       "      <td>95.35</td>\n",
+       "      <td>65130000</td>\n",
+       "      <td>95.35</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8465 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Open   High    Low  Close     Volume  Adj Close\n",
+       "Date                                                        \n",
+       "1980-12-12  28.75  28.87  28.75  28.75  117258400       0.45\n",
+       "1980-12-15  27.38  27.38  27.25  27.25   43971200       0.42\n",
+       "1980-12-16  25.37  25.37  25.25  25.25   26432000       0.39\n",
+       "1980-12-17  25.87  26.00  25.87  25.87   21610400       0.40\n",
+       "1980-12-18  26.63  26.75  26.63  26.63   18362400       0.41\n",
+       "...           ...    ...    ...    ...        ...        ...\n",
+       "2014-07-01  93.52  94.07  93.13  93.52   38170200      93.52\n",
+       "2014-07-02  93.87  94.06  93.09  93.48   28420900      93.48\n",
+       "2014-07-03  93.67  94.10  93.20  94.03   22891800      94.03\n",
+       "2014-07-07  94.14  95.99  94.10  95.97   56305400      95.97\n",
+       "2014-07-08  96.27  96.80  93.92  95.35   65130000      95.35\n",
+       "\n",
+       "[8465 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "apple.sort_index(ascending=True)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -223,22 +672,25 @@
  ],
  "metadata": {
   "anaconda-cloud": {},
+  "interpreter": {
+   "hash": "486e0d5a79acdbfffd563ee7a67a93a5017bd2a4f66495483a69f0245c8a4a6c"
+  },
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3.10.4 64-bit (windows store)",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
